# ResonanceEngine

./: .gitignore  .gitmodules  CMakeLists.txt  MElog.txt  bootstrap.py  log.txt  pom.xml
JniInterfaces/: com_kgaft_ResonanceEngine_Native_NativeMain.h  com_kgaft_ResonanceEngine_Native_VulkanContext.h  com_kgaft_ResonanceEngine_Native_VulkanContext_PhysicalDevice.h  com_kgaft_ResonanceEngine_Native_VulkanContext_VulkanContext.h  com_kgaft_ResonanceEngine_Native_Window.h
assets/pokedex/: pokedex.gltf
src/main/cxx/: JavaPhysicalDevice.cpp  JavaPhysicalDevice.h  JavaWindow.cpp  JavaWindow.h  VulkanContext.cpp  main.cpp  stb_image.cpp
src/main/cxx/Assets/: AssetImporter.hpp
src/main/cxx/Camera/: Camera.hxx  CameraManager.cxx  CameraManager.hxx  CameraMovementCallback.cxx  CameraMovementCallback.hxx  CameraRotationCallback.cxx  CameraRotationCallback.hxx
src/main/cxx/Pipelines/: IPipelineGraphics.hxx  IRenderPipeline.hxx  OutputPipeline.cpp  PipelineManager.cpp  PipelineManager.hpp  PresentationPipeline.hxx  RayTracingPipeline.cpp  RayTracingPipeline.hpp
src/main/cxx/Pipelines/Standart/: GBufferPipeline.cpp  GBufferPipeline.hpp  OutputPipeline.cpp  OutputPipeline.hpp  PBRPipeline.cpp  PBRPipeline.h
src/main/cxx/RenderData/: DescriptorSetData.cpp  DescriptorSetData.hpp  Mesh.cpp  Mesh.hpp  Model.hpp  Quad.cpp  Quad.hpp  RenderObjectsDataManager.cpp  RenderObjectsDataManager.hpp
src/main/cxx/Settings/: SettingsManager.hxx  SettingsResizeCallback.hxx
src/main/cxx/Utils/: JniString.hpp
src/main/cxx/Verbose/: EngineLogger.cxx  EngineLogger.hxx
src/main/cxx/Verbose/DevicePicker/: DevicePickerConsole.cxx  DevicePickerConsole.hxx  IDevicePicker.hxx
src/main/cxx/Vulkan/: VulkanContext.cpp  VulkanContext.hpp
src/main/cxx/Window/: Window.cpp  Window.hxx
src/main/glsl/: RTBase.glsl  ShaderBase.glsl
src/main/glsl/CubemapGen/: HDRToCube.frag  IrradianceCube.frag  PrefilterCube.frag  brfd.frag  cubeside.vert
src/main/glsl/GBufferPipeline/: main.frag  main.vert
src/main/glsl/OutputPipeline/: main.frag
src/main/glsl/PbrPipeline/: main.frag  main.vert
src/main/glsl/RayTracingPipeline/: closehit.glsl
src/main/java/com/kgaft/ResonanceEngine/: Main.java  ModulesInitializer.java
src/main/java/com/kgaft/ResonanceEngine/Native/: IWindowResizeCallback.java  NativeMain.java  VulkanContext.java  Window.java
src/main/java/com/kgaft/ResonanceEngine/Native/VulkanContext/: DeviceBuilder.java  PhysicalDevice.java  VulkanContext.java
